[package]
name = "rpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="4.0.32", features = ["derive"]}
peg = "0.8.1"
cranelift-jit = "0.94.0"
cranelift = "0.94.0"
cranelift-module = "0.94.0"
